// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitCopilotInstructions > writes deterministic content under the chemistry vocab 1`] = `
"<!-- chemag:rules:start -->
# fixtureapp — Copilot instructions

Cross-compound imports go through the public surface (\`public.ts\`) only — never reach into internal files.

| Role | Can depend on |
|------|---------------|
| element | element |
| molecule | element, molecule |
| reaction | element, molecule, interface |
| interface | element, molecule |
| adapter | element, molecule, interface, adapter |
| buffer | element, molecule, interface |

Run \`chemag check-edit <file>\` after every edit.
<!-- chemag:rules:end -->
"
`;

exports[`emitCopilotInstructions > writes to .github/copilot-instructions.md with the tightest budget 1`] = `
"<!-- chemag:rules:start -->
# fixtureapp — Copilot instructions

Cross-module imports go through the public surface (\`public.ts\`) only — never reach into internal files.

| Role | Can depend on |
|------|---------------|
| element | element |
| molecule | element, molecule |
| reaction | element, molecule, interface |
| interface | element, molecule |
| adapter | element, molecule, interface, adapter |
| buffer | element, molecule, interface |

Run \`chemag check-edit <file>\` after every edit.
<!-- chemag:rules:end -->
"
`;
